force-app/main/default/objects/RegulatoryTrxnFee/RegulatoryTrxnFee.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>