force-app/main/default/objects/RegulatoryTrxnFee/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <formula>TotalFeeAmount - Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>