force-app/main/default/objects/RegulatoryTrxnFee/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Regulatory Transaction Fees</relationshipLabel>
    <relationshipName>Regulatory_Transaction_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>