force-app/main/default/objects/RegulatoryTrxnFee/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>TEXT( Application__r.Application_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>