force-app/main/default/objects/RegulatoryTrxnFee/fields/Person_Examination__c.field-meta.xml
<CustomField>
    <fullName>Person_Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Examination</label>
    <referenceTo>PersonExamination</referenceTo>
    <relationshipLabel>Regulatory Transaction Fees</relationshipLabel>
    <relationshipName>Regulatory_Transaction_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>