force-app/main/default/objects/RegulatoryTrxnFee/fields/Request_XML__c.field-meta.xml
<CustomField>
    <fullName>Request_XML__c</fullName>
    <label>Request XML</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>