force-app/main/default/objects/RegulatoryTrxnFee/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <label>Response JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>